<resources>
    <string name="app_name">FlpTest</string>

    <!--- MyLocationActivity用-->
    <string name="locationStart">測位開始</string>
    <string name="locationWait">測位待機中</string>
    <string name="locationPositioning">測位中</string>
    <string name="locationStop">測位停止</string>
    <string name="locationSetting">設定</string>

    <!--- SettingActivity用-->
    <string name="settingActIsCold">アシストデータ削除</string>

    <!---LocationLog用-->
    <string name="settingHeader">測位方式,測位回数(0:無限),測位タイムアウト,測位間隔,SetInterval使用有無,SetInterval,SUPLEND待ち時間,アシストデータ削除時間,アシストデータ削除有無</string>
    <string name="locationHeader">測位開始時間,測位終了時間,測位成否,緯度,経度,TTFF,Accuracy,Altitude,Bearing,Provider,LocationTime(epoch),LocationTime(UTC)</string>

    <!---Setting用の項目 -->
    <string name="settingPrefName">MyLocationSetting</string>
    <string name="settingLocationPriority">LOCATIONPRIORITY</string>
    <string name="settingLocationApi">LOCATIONAPI</string>
    <string name="settingSetInterval">SetInterval</string>
    <string name="settingIsSetInterval">IsSetInterval</string>
    <string name="settingCount">COUNT</string>
    <string name="settingTimeout">TIMEOUT</string>
    <string name="settingInterval">INTERVAL</string>
    <string name="settingIsCold">isCold</string>
    <string name="settingSuplEndWaitTime">SUPLENDWAITTIME</string>
    <string name="settingDelAssistdataTime">DelAssistdataTime</string>

    <!---測位種別用の文字列定数 -->
    <string name="locationApi">測位API</string>
    <string name="locationAccuracy">測位精度</string>
    <string name="api_requestLocationUpdates">requestLocationUpdates</string>
    <string name="api_getCurrentLocation">getCurrentLocation</string>
    <string name="locationFlpBalancedPowerAccuracy">BalancedPowerAccuracy</string>
    <string name="locationFlpHighAccuracy">HighAccuracy</string>
    <string name="locationFlpLowPower">LowPower</string>
    <string name="locationFlpNoPower">NoPower</string>

    <!---測位結果をIntentで通知する場合の判別用のタグ-->
    <string name="TagisFix">isFix</string>
    <string name="TagLocation">location</string>
    <string name="Tagttff">TTFF</string>
    <string name="TagLocationStarttime">locationStartTime</string>
    <string name="TagLocationStoptime">locationStopTime</string>
    <string name="TagSuccessCount">successCount</string>
    <string name="TagFailCount">failCount</string>

    <!--ServiceからPresentationが受け取る値の種類-->
    <!--この値によってActivityに対する処理を変える-->
    <string name="category">category</string>
    <string name="categoryLocation">categoryLocation</string>
    <string name="categoryColdStart">CategoryColdStart</string>
    <string name="categoryColdStop">CategoryColdStop</string>
    <string name="categoryServiceEnd">CategoryServiceEnd</string>
</resources>
