<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.sio.testapp.flptest.Activity.SettingActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLocationApiList"
                android:text="@string/locationApi"></TextView>
            <RadioGroup
                android:id="@+id/radiogroupLocationApi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocationApiList"
                >
                <RadioButton
                    android:id="@+id/rbRequestLocationUpdates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/api_requestLocationUpdates" />
                <RadioButton
                    android:id="@+id/rbGetCurrentLocation"
                    android:text="@string/api_getCurrentLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewLocationList"
                android:text="@string/locationAccuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/radiogroupPositioningType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocationList"
                >

                <RadioButton
                    android:id="@+id/rbFlpBalancedPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/locationFlpBalancedPowerAccuracy" />
                <RadioButton
                    android:id="@+id/rbFlpHighAccuracy"
                    android:text="@string/locationFlpHighAccuracy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rbFlpLowPower"
                    android:text="@string/locationFlpLowPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rbFlpNoPower"
                    android:text="@string/locationFlpNoPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewSetInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingSetInterval" />
                <CheckBox
                    android:id="@+id/checkboxIsSetInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <EditText
                android:id="@+id/editTextSetInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
            />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingCount"
                app:layout_constraintTop_toBottomOf="@+id/radiogroupPositioningType"
                />

            <EditText
                android:id="@+id/editTextCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/TextViewCount" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingTimeout"
                app:layout_constraintTop_toBottomOf="@+id/editTextCount" />

            <EditText
                android:id="@+id/editTextTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/TextViewTimeout" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingInterval"
                app:layout_constraintTop_toBottomOf="@+id/editTextTimeout" />

            <EditText
                android:id="@+id/editTextInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/TextViewInterval" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingSuplEndWaitTime"
                app:layout_constraintTop_toBottomOf="@+id/editTextInterval" />

            <EditText
                android:id="@+id/editTextSuplEndWaitTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/TextViewSuplEndWaitTime" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingDelAssistdataTime"
                app:layout_constraintTop_toBottomOf="@+id/editTextSuplEndWaitTime" />

            <EditText
                android:id="@+id/editTextDelAssistDataTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/TextViewDelAssistDataTime" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewDelAssistData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingActIsCold" />
                <CheckBox
                    android:id="@+id/checkboxIsCold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
